--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
-    "typescript": "^5"
+    "typescript": "5.9.3"
   }
 }
