feat: 添加多个基于c_utils的项目实现
添加日志分析工具、进程监控工具、任务管理器和文本差异比较工具的项目实现
添加项目规范和任务清单文档
更新CMakeLists.txt以构建新项目
在.gitignore中添加项目相关排除项

--- a/c_utils/CMakeLists.txt
+++ b/c_utils/CMakeLists.txt
@@ -85,6 +85,41 @@ if(BUILD_DEMOS)
     endforeach()
 endif()
 
+# 构建项目
+option(BUILD_PROJECTS "Build project programs" ON)
+
+if(BUILD_PROJECTS)
+    # 日志分析工具
+    add_executable(log_analyzer 
+        ${CMAKE_CURRENT_SOURCE_DIR}/projects/log_analyzer/log_analyzer.c
+    )
+    target_link_libraries(log_analyzer PRIVATE c_utils)
+
+    # 进程监控工具
+    add_executable(process_monitor 
+        ${CMAKE_CURRENT_SOURCE_DIR}/projects/process_monitor/process_monitor.c
+    )
+    target_link_libraries(process_monitor PRIVATE c_utils)
+
+    # 任务管理器
+    add_executable(task_manager 
+        ${CMAKE_CURRENT_SOURCE_DIR}/projects/task_manager/task_manager.c
+    )
+    target_link_libraries(task_manager PRIVATE c_utils)
+
+    # 文本差异比较工具
+    add_executable(text_diff 
+        ${CMAKE_CURRENT_SOURCE_DIR}/projects/text_diff/text_diff.c
+    )
+    target_link_libraries(text_diff PRIVATE c_utils)
+
+    # 缓存服务器
+    add_executable(cache_server 
+        ${CMAKE_CURRENT_SOURCE_DIR}/projects/cache_server/cache_server.c
+    )
+    target_link_libraries(cache_server PRIVATE c_utils)
+endif()
+
 # 安装目标
 install(TARGETS c_utils
     ARCHIVE DESTINATION lib
