--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,5 @@ yarn-error.log*
 next-env.d.ts
 .vscode/settings.json
 .cache/**
+c_utils/projects/log_analyzer/sample.log
+c_utils/projects/log_analyzer/build/**
